Attempt bugfix for modal not covering full area when scrolling quickly on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -162,8 +162,10 @@ table {
 .navModal {
   display: none;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100%;
+  height: 150%;
   background-color: rgba(255, 255, 255, .3);
   z-index: 99;
 }
